<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <View
        android:layout_width="280dp"
        android:layout_height="470dp"
        android:alpha="0.3"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/view" />

    <TextView
        android:id="@+id/menuText"
        android:layout_width="280dp"
        android:paddingTop="10dp"
        android:layout_height="wrap_content"
        android:text="HOST GAME"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_below="@+id/menuText"
        android:layout_alignRight="@+id/menuText"
        android:layout_alignEnd="@+id/menuText">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/gameName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="Game Name"
                app:met_iconPadding="0dp"
                android:inputType="text"
                android:maxLength="30"
                android:imeOptions="actionNext"
                app:met_baseColor="#ffffff"
                android:lines="1" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/numberOfPlayers"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="Number of Players"
                android:maxLength="1"
                app:met_baseColor="#ffffff"
                android:gravity="center"
                android:inputType="number"
                app:met_iconPadding="0dp" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/startGame"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Start Game"
        android:textAllCaps="true"
        android:background="@drawable/button_drawable"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />
</RelativeLayout>

